--- a/styles/main.css
+++ b/styles/main.css
@@ -1,27 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@300;400;500;600;700&display=swap');
 
-
-* {font-family: 'Readex Pro';}
-
+* {
+    font-family: 'Readex Pro';
+}
 
 a {
     text-decoration: none;
-    color: white !important;
+    color: pink !important;
     font-weight: 500;
 }
 
 a:hover {
-    color: #d33682 !important;
+    color: #ff69b4 !important; 
     text-decoration: none;
 }
 
-ul {list-style-type: none;}
+ul {
+    list-style-type: none;
+}
 
 hr {
     margin-top: 0px;
     margin-bottom: 5%;
 }
 
-#MainMenu {visibility: hidden;}
-footer {visibility: hidden;}
-header {visibility: hidden;}
+#MainMenu, footer, header {
+    visibility: hidden;
+}
